--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>prueba jquery</title>
+	<title>TVifi</title>
+	<meta charset="UTF-8">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="index.css">
+
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js"></script> 
+	<script type="text/javascript" src="index.js"></script>
+
 </head>
 <body>
 
