Agrego archivos iniciales

--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="index.css">
 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js"></script> 
-	<script type="text/javascript" src="index.js"></script>
+
 
 </head>
 <body>
+	<div id="app-container">
+		<header id="app-header">
+			<h1> TVifi </h1>
 
+		</header>
+		<section id="app-body"> 
+
+		</section>
+		<footer id="app-footer">
+			<p> Hecho por Luis Rodr&iacute;guez </p>
+		</footer>
+
+	</div>
+
+	<script type="text/javascript" src="http://code.jquery.com/jquery-2.2.2.min.js"></script> 
+	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
