Se agrego ajax al javascript

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
 	<div id="app-container">
 		<header id="app-header" data-title="TVifi">
 			<h1> TVifi </h1>
-
 		</header>
 		<section id="app-body"> 
-
+			<form class="search-form">
+				<input type="text" />
+				<button type="submit"> Buscar </button>			
+			</form>
+			<div class="tv-shows">
+				<div class="loader">Loading...</div>
+			</div>
 		</section>
 		<footer id="app-footer">
 			<p> Hecho por Luis Rodr&iacute;guez </p>
